--- a/app/index.html
+++ b/app/index.html
@@ -110,7 +110,7 @@
                         <a class="page-scroll" href="#about">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#team">Experience</a>
+                        <a class="page-scroll" href="#team">Skills</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
