Font Awesome added

--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="Aditya Purandare">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aditya Purandare | Home</title>
+    <title>Aditya Purandare | Home Page</title>
 
     <!-- Disable tap highlight on IE -->
     <meta name="msapplication-tap-highlight" content="no">
@@ -50,8 +50,7 @@
     <!--<link rel="stylesheet" href="https://storage.googleapis.com/code.getmdl.io/1.0.6/material.indigo-pink.min.css">-->
 
     <!-- Material Design icons -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <title>Agency - Start Bootstrap Theme</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
 
     <!-- Bootstrap Core CSS -->
     <!-- Latest compiled and minified CSS -->
@@ -101,19 +100,19 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">Services</a>
+                        <a class="page-scroll" href="#services"><i class="fa fa-lg fa-github"></i> Github</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#portfolio">Projects</a>
+                        <a class="page-scroll" href="#portfolio"><i class="fa fa-desktop"></i> Projects</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">About</a>
+                        <a class="page-scroll" href="#about"><i class="fa fa-lg fa-user"></i> About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#team">Skills</a>
+                        <a class="page-scroll" href="#team"><i class="fa fa-university"></i> Skills</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
+                        <a class="page-scroll" href="#contact"><i class="fa fa-envelope"></i> Contact</a>
                     </li>
                 </ul>
             </div>
@@ -129,7 +128,7 @@
                 <div class="circle"></div>
                 <div class="intro-lead-in">Welcome To My Studio!</div>
                 <div class="intro-heading">It's Nice To Meet You</div>
-                <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
+                <a href="#services" class="page-scroll btn btn-xl">Tell Me More <i class="fa fa-lg fa-chevron-circle-down"></i></a>
             </div>
         </div>
     </header>
@@ -139,12 +138,16 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Services</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading">Development on <a href="http://github.com/audip">GitHub</a></h2>
+                    <h3 class="section-subheading text-muted">Here's what I am working on these days</h3>
                 </div>
             </div>
             <div class="row text-center">
-                <div class="col-md-4">
+                <div class="col-md-12 span8" style="height:100%">
+                    <img src="images/github.png" width="80%" height="40%"/>
+                    <!-- <iframe src="https://api.github.com/audip" style="border: 1; width:80%; height:100%;" seamless="seamless">Github</iframe>-->
+                </div>
+                <!--<div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
@@ -167,7 +170,7 @@
                     </span>
                     <h4 class="service-heading">Web Security</h4>
                     <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
@@ -177,8 +180,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Portfolio</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading">Projects</h2>
+                    <h3 class="section-subheading text-muted">Here's the portfolio of my work</h3>
                 </div>
             </div>
             <div class="row">
@@ -277,7 +280,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">About</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted">The Journey: Here's how it all began</h3>
                 </div>
             </div>
             <div class="row">
@@ -285,12 +288,12 @@
                     <ul class="timeline">
                         <li>
                             <div class="timeline-image">
-                                <img class="images-circle img-responsive" src="images/about/1.jpg" alt="">
+                                <img class="img-circle img-responsive" src="images/about/dpsbhilai.jpg" alt="Delhi Public School Bhilai photo">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>2009-2011</h4>
-                                    <h4 class="subheading">Our Humble Beginnings</h4>
+                                    <h4>1997-2011</h4>
+                                    <h4 class="subheading">Delhi Public School, Bhilai</h4>
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
@@ -299,12 +302,12 @@
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <img class="images-circle img-responsive" src="images/about/2.jpg" alt="">
+                                <img class="img-circle img-responsive" src="images/about/nitraipur.jpg" alt="NIT Raipur photo">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>March 2011</h4>
-                                    <h4 class="subheading">An Agency is Born</h4>
+                                    <h4>2011-2015</h4>
+                                    <h4 class="subheading">National Institute of Technology, Raipur</h4>
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
@@ -313,12 +316,12 @@
                         </li>
                         <li>
                             <div class="timeline-image">
-                                <img class="images-circle img-responsive" src="images/about/3.jpg" alt="">
+                                <img class="img-circle img-responsive" src="images/about/tamu.jpg" alt="Texas A&M University Photo">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>December 2012</h4>
-                                    <h4 class="subheading">Transition to Full Service</h4>
+                                    <h4>2015-2017</h4>
+                                    <h4 class="subheading">Texas A&M University, College Station</h4>
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
@@ -327,12 +330,12 @@
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <img class="images-circle img-responsive" src="images/about/4.jpg" alt="">
+                                <img class="img-circle img-responsive" src="images/about/3.jpg" alt="Laptop photo">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>July 2014</h4>
-                                    <h4 class="subheading">Phase Two Expansion</h4>
+                                    <h4>2015-Till Date</h4>
+                                    <h4 class="subheading">Today & Beyond</h4>
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
@@ -341,9 +344,9 @@
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <h4>Be Part
-                                    <br>Of Our
-                                    <br>Story!</h4>
+                                <h4>The
+                                    <br>Journey Will
+                                    <br>Continue!</h4>
                             </div>
                         </li>
                     </ul>
@@ -421,23 +424,23 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-3 col-sm-6">
-                    <a href="#">
-                        <img src="images/logos/envato.jpg" class="images-responsive img-centered" alt="">
+                    <a href="https://nodejs.org/en/">
+                        <img src="images/logos/nodejs.jpg" class="images-responsive img-centered" alt="Node JS Logo">
                     </a>
                 </div>
                 <div class="col-md-3 col-sm-6">
-                    <a href="#">
-                        <img src="images/logos/designmodo.jpg" class="images-responsive img-centered" alt="">
+                    <a href="https://www.java.com/en/">
+                        <img src="images/logos/java.jpg" class="images-responsive img-centered" alt="Java Logo">
                     </a>
                 </div>
                 <div class="col-md-3 col-sm-6">
-                    <a href="#">
-                        <img src="images/logos/themeforest.jpg" class="images-responsive img-centered" alt="">
+                    <a href="https://www.python.org">
+                        <img src="images/logos/python.jpg" class="images-responsive img-centered" alt="Python Logo">
                     </a>
                 </div>
                 <div class="col-md-3 col-sm-6">
-                    <a href="#">
-                        <img src="images/logos/creative-market.jpg" class="images-responsive img-centered" alt="">
+                    <a href="http://php.net">
+                        <img src="images/logos/php.jpg" class="images-responsive img-centered" alt="PHP Logo">
                     </a>
                 </div>
             </div>
@@ -450,7 +453,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Contact Me</h2>
-                    <h3 class="section-subheading text-muted">I will get in touch with you soon</h3>
+                    <h3 class="section-subheading text-muted">I would love to get in touch with you</h3>
                 </div>
             </div>
             <div class="row">
@@ -468,7 +471,7 @@
                                     <p class="help-block text-danger"></p>
                                 </div>
                                 <div class="form-group">
-                                    <input type="tel" class="form-control" autocomplete="tel" placeholder="+1 (555) 555 5555" id="phone" required data-validation-required-message="Please enter your phone number.">
+                                    <input type="tel" class="form-control" autocomplete="tel" placeholder="Your Phone * [+1(555) 555-5555]" id="phone" required data-validation-required-message="Please enter your phone number.">
                                     <p class="help-block text-danger"></p>
                                 </div>
                             </div>
@@ -691,13 +694,16 @@
     </div>
 
     <!-- jQuery -->
-    <script src="js/jquery.js"></script>
+    <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
 
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 
     <!-- Plugin JavaScript -->
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+
+
+    <!-- build:js(app/) ../../scripts/main.min.js -->
     <script src="js/classie.js"></script>
     <script src="js/cbpAnimatedHeader.js"></script>
 
@@ -708,7 +714,6 @@
     <!-- Custom Theme JavaScript -->
     <script src="js/agency.js"></script>
 
-    <!-- build:js(app/) ../../scripts/main.min.js -->
     <script src="scripts/main.js"></script>
     <!-- endbuild -->
 
