--- a/app/index.html
+++ b/app/index.html
@@ -296,7 +296,7 @@
                                     <h4 class="subheading">Delhi Public School, Bhilai</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">Started from playschool at D.P.S. Bhilai, where I learnt to read, write and even coding in C++. I had the unique opportunity of leading the school in capacity of HeadBoy and picked up valuable experience along the way. Graduated with Physics, Chemistry, Maths & Computer Science as majors.</p>
                                 </div>
                             </div>
                         </li>
@@ -310,7 +310,7 @@
                                     <h4 class="subheading">National Institute of Technology, Raipur</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">Began the undergraduate school at N.I.T Raipur, where I learnt making new friends, living away from home & how to live life better. Founded CodeAthon Club, contributed to Abhikalan Mission and served as Placement Convener for training and recruitment of 800 students.</p>
                                 </div>
                             </div>
                         </li>
@@ -324,7 +324,7 @@
                                     <h4 class="subheading">Texas A&M University, College Station</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">Carrying momentum forward, I joined Texas A&M University to realize my dream of pursuing Masters' in Management Information Systems and equip myself with skillset and get industrial exposure in Software Development and Big Data.</p>
                                 </div>
                             </div>
                         </li>
@@ -338,7 +338,7 @@
                                     <h4 class="subheading">Today & Beyond</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">I keep taking part in Hackathons & Coding Challenges to keep myself abreast with the latest programming paradigms. Love reading tech news on TechCrunch & The Verge. Presently, enrolled in CodePath's iOS Development course in Spring 2016. </p>
                                 </div>
                             </div>
                         </li>
@@ -360,8 +360,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Our Amazing Team</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading">My Skillset</h2>
+                    <h3 class="section-subheading text-muted">Here's how experienced I am with these technologies</h3>
                 </div>
             </div>
             <div class="row">
