--- a/app/index.html
+++ b/app/index.html
@@ -40,15 +40,6 @@
     <link rel="canonical" href="http://www.example.com/">
     -->
 
-    <!-- Material Design Lite page styles:
-    You can choose other color schemes from the CDN, more info here http://www.getmdl.io/customize/index.html
-    Format: material.color1-color2.min.css, some examples:
-    material.red-teal.min.css
-    material.blue-orange.min.css
-    material.purple-indigo.min.css
-    -->
-    <!--<link rel="stylesheet" href="https://storage.googleapis.com/code.getmdl.io/1.0.6/material.indigo-pink.min.css">-->
-
     <!-- Material Design icons -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
 
@@ -100,7 +91,7 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services"><i class="fa fa-lg fa-github"></i> Github</a>
+                        <a class="page-scroll" href="#github-section"><i class="fa fa-lg fa-github"></i> Github</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#portfolio"><i class="fa fa-desktop"></i> Projects</a>
@@ -125,16 +116,16 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="circle"></div>
+                <div class="circle img-responsive"></div>
                 <div class="intro-lead-in">Welcome To My Studio!</div>
                 <div class="intro-heading">It's Nice To Meet You</div>
-                <a href="#services" class="page-scroll btn btn-xl">Tell Me More <i class="fa fa-lg fa-chevron-circle-down"></i></a>
+                <a href="#github-section" class="page-scroll btn btn-xl">Tell Me More <i class="fa fa-lg fa-chevron-circle-down"></i></a>
             </div>
         </div>
     </header>
 
-    <!-- Services Section -->
-    <section id="services">
+    <!-- github-section Section -->
+    <section id="github-section">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -144,7 +135,7 @@
             </div>
             <div class="row text-center">
                 <div class="col-md-12 span8" style="height:100%">
-                    <img src="images/github.png" width="80%" height="40%"/>
+                    <img src="images/github.png" class="img-responsive" style="margin:auto;" width="85%" />
                     <!-- <iframe src="https://api.github.com/audip" style="border: 1; width:80%; height:100%;" seamless="seamless">Github</iframe>-->
                 </div>
                 <!--<div class="col-md-4">
@@ -195,8 +186,8 @@
                         <img src="images/portfolio/roundicons.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Round Icons</h4>
-                        <p class="text-muted">Graphic Design</p>
+                        <h4>Price Elasticity for books</h4>
+                        <p class="text-muted">Hadoop MapReduce App & Web UI</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
@@ -209,8 +200,8 @@
                         <img src="images/portfolio/startup-framework.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Startup Framework</h4>
-                        <p class="text-muted">Website Design</p>
+                        <h4>Tipper iOS App</h4>
+                        <p class="text-muted">Tip calculator app with modern design</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
@@ -223,8 +214,8 @@
                         <img src="images/portfolio/treehouse.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Treehouse</h4>
-                        <p class="text-muted">Website Design</p>
+                        <h4>Smart Home Systems</h4>
+                        <p class="text-muted">Innovative system & app prototype</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
@@ -237,8 +228,8 @@
                         <img src="images/portfolio/golden.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Golden</h4>
-                        <p class="text-muted">Website Design</p>
+                        <h4>Voice-navigated Parrot drone</h4>
+                        <p class="text-muted">Intelligent Watson based Node.js App</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
@@ -251,8 +242,8 @@
                         <img src="images/portfolio/escape.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Escape</h4>
-                        <p class="text-muted">Website Design</p>
+                        <h4>Renaissance Pirate</h4>
+                        <p class="text-muted">Viral online game built with PHP</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
@@ -265,8 +256,8 @@
                         <img src="images/portfolio/dreams.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Dreams</h4>
-                        <p class="text-muted">Website Design</p>
+                        <h4>Estinno Labs</h4>
+                        <p class="text-muted">Website Development (HTML,CSS,PHP)</p>
                     </div>
                 </div>
             </div>
@@ -539,18 +530,11 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <!-- Project Details Go Here -->
-                            <h2>Project Name</h2>
+                            <h2>Project Heading</h2>
                             <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                            <img class="images-responsive img-centered" src="images/portfolio/roundicons-free.png" alt="">
-                            <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
-                            <p>
-                                <strong>Want these icons in this portfolio item sample?</strong>You can download 60 of them for free, courtesy of <a href="https://getdpd.com/cart/hoplink/18076?referrer=bvbo4kax5k8ogc">RoundIcons.com</a>, or you can purchase the 1500 icon set <a href="https://getdpd.com/cart/hoplink/18076?referrer=bvbo4kax5k8ogc">here</a>.</p>
-                            <ul class="list-inline">
-                                <li>Date: July 2014</li>
-                                <li>Client: Round Icons</li>
-                                <li>Category: Graphic Design</li>
-                            </ul>
+                            <img class="images-responsive img-centered" src="images/portfolio/startup-framework-preview.png" alt="">
+                            <p><a href="http://designmodo.com/startup/?u=787">Startup Framework</a> is a website builder for professionals. Startup Framework contains components and complex blocks (PSD+HTML Bootstrap themes and templates) which can easily be integrated into almost any design. All of these components are made in the same style, and can easily be integrated into projects, allowing you to create hundreds of solutions for your future projects.</p>
+                            <p>You can preview Startup Framework <a href="http://designmodo.com/startup/?u=787">here</a>.</p>
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                         </div>
                     </div>
@@ -656,7 +640,7 @@
                             <h2>Project Name</h2>
                             <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
                             <img class="images-responsive img-centered" src="images/portfolio/escape-preview.png" alt="">
-                            <p>Escape is a free PSD web template built by <a href="https://www.behance.net/MathavanJaya">Mathavan Jaya</a>. Escape is a one page web template that was designed with agencies in mind. This template is ideal for those looking for a simple one page solution to describe your business and offer your services.</p>
+                            <p>Escape is a free PSD web template built by <a href="https://www.behance.net/MathavanJaya">Mathavan Jaya</a>. Escape is a one page web template that was designed with agencies in mind. This template is ideal for those looking for a simple one page solution to describe your business and offer your projects.</p>
                             <p>You can download the PSD template in this portfolio sample item at <a href="http://freebiesxpress.com/gallery/escape-one-page-psd-web-template/">FreebiesXpress.com</a>.</p>
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                         </div>
