Request send post working

--- a/app/index.html
+++ b/app/index.html
@@ -451,7 +451,7 @@
                             <div class="col-md-6">
                                 <div class="form-group">
 
-                                    <input type="text" name="username" class="form-control" autocomplete="name" placeholder="Your Name *" id="name" required data-validation-required-message="Please enter your name.">
+                                    <input type="text" name="name" class="form-control" autocomplete="name" placeholder="Your Name *" id="name" required data-validation-required-message="Please enter your name.">
                                     <p class="help-block text-danger"></p>
                                 </div>
                                 <div class="form-group">
