Add portfolio images and content

--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,6 @@
 <html lang="en">
 
 <head>
-
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="">
@@ -180,7 +179,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="images/portfolio/roundicons.png" class="img-responsive" alt="">
+                        <img src="images/portfolio/hadoop.png" class="img-responsive" alt="Hadoop Web UI Screenshot" style="height:260px">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Price Elasticity for books</h4>
@@ -194,7 +193,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="images/portfolio/startup-framework.png" class="img-responsive" alt="">
+                        <img src="images/portfolio/tipper.png" class="img-responsive" alt="Tipper iOS App Screenshot" style="max-height:260px;margin:auto">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Tipper iOS App</h4>
@@ -208,7 +207,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="images/portfolio/treehouse.png" class="img-responsive" alt="">
+                        <img src="images/portfolio/smarthome-systems.png" class="img-responsive" alt="App Prototype screenshot" style="max-height:260px;margin:auto">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Smart Home Systems</h4>
@@ -239,7 +238,7 @@
                         <img src="images/portfolio/escape.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Renaissance Pirate</h4>
+                        <h4>Renaissance Pirates</h4>
                         <p class="text-muted">Viral online game built with PHP</p>
                     </div>
                 </div>
@@ -253,7 +252,7 @@
                         <img src="images/portfolio/dreams.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Estinno Labs</h4>
+                        <h4>BuyMeGroc</h4>
                         <p class="text-muted">Website Development (HTML,CSS,PHP)</p>
                     </div>
                 </div>
@@ -527,11 +526,11 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Heading</h2>
-                            <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                            <img class="images-responsive img-centered" src="images/portfolio/startup-framework-preview.png" alt="">
-                            <p><a href="http://designmodo.com/startup/?u=787">Startup Framework</a> is a website builder for professionals. Startup Framework contains components and complex blocks (PSD+HTML Bootstrap themes and templates) which can easily be integrated into almost any design. All of these components are made in the same style, and can easily be integrated into projects, allowing you to create hundreds of solutions for your future projects.</p>
-                            <p>You can preview Startup Framework <a href="http://designmodo.com/startup/?u=787">here</a>.</p>
+                            <h2>Price Elasticity for books</h2>
+                            <p class="item-intro text-muted">Hadoop MapReduce App & Web UI</p>
+                            <img class="images-responsive img-centered" src="images/portfolio/hadoop.png" alt="Price Elasticity Web UI" width="100%" height="100%">
+                            <p><a href="https://github.com/audip/priceelasticity">Predictive price modelling for elastic pricing</a> is a Apache Hadoop project built to effectively compute the price that book resulting in maximum sales revenue. This is achieved by parralelly processing data using Exponential smoothing and Multiple jobs written in Java.</p>
+                            <p><a href="https://github.com/audip/priceelasticitywebui">Web UI</a> for demonstration of the app was built using JavaScript, jQuery, HTML5 & CSS3.</p>
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                         </div>
                     </div>
@@ -553,11 +552,11 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Heading</h2>
-                            <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                            <img class="images-responsive img-centered" src="images/portfolio/startup-framework-preview.png" alt="">
-                            <p><a href="http://designmodo.com/startup/?u=787">Startup Framework</a> is a website builder for professionals. Startup Framework contains components and complex blocks (PSD+HTML Bootstrap themes and templates) which can easily be integrated into almost any design. All of these components are made in the same style, and can easily be integrated into projects, allowing you to create hundreds of solutions for your future projects.</p>
-                            <p>You can preview Startup Framework <a href="http://designmodo.com/startup/?u=787">here</a>.</p>
+                            <h2>Tipper iOS App</h2>
+                            <p class="item-intro text-muted">Tip calculator app with modern design</p>
+                            <img class="images-responsive img-centered" src="http://i.imgur.com/upvOUf6.gif" alt="Video demo of Tipper Calculator iOS App">
+                            <p><a href="https://github.com/audip/tipper">Tipper</a> is an iOS App built on Apple's iOS 9 SDK and Xcode 7 implmenting the modern, playful and open-source Swift language to quickly calculate tip for the user. Tipper is unique in its right as it persists your data and settings on every launch and clear itself when unused for over 10 min saving you memory and time.</p>
+                            <p><a href="https://github.com/audip/tipper">Tipper </a>is designed with modern theme in mind and looks crisp on every screen.</p>
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                         </div>
                     </div>
@@ -580,9 +579,9 @@
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
                             <!-- Project Details Go Here -->
-                            <h2>Project Name</h2>
-                            <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                            <img class="images-responsive img-centered" src="images/portfolio/treehouse-preview.png" alt="">
+                            <h2>Smart Home Systems</h2>
+                            <p class="item-intro text-muted">Innovative system & app prototype</p>
+                            <iframe width="100%" height="400" class="images-responsive img-centered" src="https://www.youtube.com/embed/NcNSBPWvOLk" frameborder="0" allowfullscreen></iframe>
                             <p>Treehouse is a free PSD web template built by <a href="https://www.behance.net/MathavanJaya">Mathavan Jaya</a>. This is bright and spacious design perfect for people or startup companies looking to showcase their apps or other projects.</p>
                             <p>You can download the PSD template in this portfolio sample item at <a href="http://freebiesxpress.com/gallery/treehouse-free-psd-web-template/">FreebiesXpress.com</a>.</p>
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
@@ -607,8 +606,8 @@
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
                             <!-- Project Details Go Here -->
-                            <h2>Project Name</h2>
-                            <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                            <h2>Voice-navigated Parrot drone</h2>
+                            <p class="item-intro text-muted">Intelligent Watson based Node.js App</p>
                             <img class="images-responsive img-centered" src="images/portfolio/golden-preview.png" alt="">
                             <p>Start Bootstrap's Agency theme is based on Golden, a free PSD website template built by <a href="https://www.behance.net/MathavanJaya">Mathavan Jaya</a>. Golden is a modern and clean one page web template that was made exclusively for Best PSD Freebies. This template has a great portfolio, timeline, and meet your team sections that can be easily modified to fit your needs.</p>
                             <p>You can download the PSD template in this portfolio sample item at <a href="http://freebiesxpress.com/gallery/golden-free-one-page-web-template/">FreebiesXpress.com</a>.</p>
@@ -634,8 +633,8 @@
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
                             <!-- Project Details Go Here -->
-                            <h2>Project Name</h2>
-                            <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                            <h2>Renaissance Pirates</h2>
+                            <p class="item-intro text-muted">Viral online game built with PHP</p>
                             <img class="images-responsive img-centered" src="images/portfolio/escape-preview.png" alt="">
                             <p>Escape is a free PSD web template built by <a href="https://www.behance.net/MathavanJaya">Mathavan Jaya</a>. Escape is a one page web template that was designed with agencies in mind. This template is ideal for those looking for a simple one page solution to describe your business and offer your projects.</p>
                             <p>You can download the PSD template in this portfolio sample item at <a href="http://freebiesxpress.com/gallery/escape-one-page-psd-web-template/">FreebiesXpress.com</a>.</p>
@@ -661,8 +660,8 @@
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
                             <!-- Project Details Go Here -->
-                            <h2>Project Name</h2>
-                            <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                            <h2>BuyMeGroc</h2>
+                            <p class="item-intro text-muted">Website Development (HTML,CSS,PHP)</p>
                             <img class="images-responsive img-centered" src="images/portfolio/dreams-preview.png" alt="">
                             <p>Dreams is a free PSD web template built by <a href="https://www.behance.net/MathavanJaya">Mathavan Jaya</a>. Dreams is a modern one page web template designed for almost any purpose. It’s a beautiful template that’s designed with the Bootstrap framework in mind.</p>
                             <p>You can download the PSD template in this portfolio sample item at <a href="http://freebiesxpress.com/gallery/dreams-free-one-page-web-template/">FreebiesXpress.com</a>.</p>
