Header alignment remains

--- a/app/animate-preloader.html
+++ b/app/animate-preloader.html
@@ -23,7 +23,7 @@
 			</header>
 
 			<div class="ip-main">
-				<div class="broswer">
+				<div class="browser">
 					<h2>Make yourself at home.</h2>
 				</div>
 			</div>
