--- a/app/index.html
+++ b/app/index.html
@@ -88,7 +88,7 @@
             <div class="ip-main">
                 <div class="browser">
                     <!-- Navigation -->
-                    <nav class="navbar navbar-default navbar-fixed-top">
+                    <nav class="navbar navbar-default navbar-fixed-top loading" id="navbar">
                             <!-- Brand and toggle get grouped for better mobile display -->
                             <div class="navbar-header page-scroll">
                                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -129,7 +129,7 @@
                     </nav>
 
                     <!-- Header -->
-                    <div class="header1">
+                    <div class="header">
                         <div class="container">
                             <div class="intro-text">
                                 <div class="circle img-responsive"></div>
@@ -707,9 +707,10 @@
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 
     <script src="js/classie.js"></script>
-    <script src="js/cbpAnimatedHeader.min.js"></script>
     <script src="js/pathLoader.js"></script>
     <script src="js/preloader.js"></script>
+    <script src="js/cbpAnimatedHeader.min.js"></script>
+
 
     <!-- Contact Form JavaScript -->
     <script src="js/jqBootstrapValidation.js"></script>
